custom own theme

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -24,6 +24,7 @@
   <script src="//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js"></script>
   <%- js(['js/qrious', 'js/gitment']) %>
   <%- partial('_third-party/mathjax') %>
+  <%- partial('_third-party/mermaid') %>
 </head>
 <div class="wechat-share">
   <img src="/css/images/logo.png" />
