--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -2,7 +2,7 @@
   <p class="copyright">
     &copy; <%= new Date().getFullYear() %> | Proudly powered by <a href="https://hexo.io" target="_blank">Hexo</a>
     <br>
-    Theme by <a href="https://github.com/yanm1ng">yanm1ng</a>
+    Theme by <a href="https://github.com/yanm1ng/hexo-theme-vexo">Vexo</a>    Hosted by <a href="https://pages.coding.me" style="font-weight: bold">Coding Pages</a>
   </p>
 </footer>
 
