support visitor count

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -25,6 +25,7 @@
   <%- js(['js/qrious', 'js/gitment']) %>
   <%- partial('_third-party/mathjax') %>
   <%- partial('_third-party/mermaid') %>
+  <%- partial('_third-party/leancloud') %>
 </head>
 <div class="wechat-share">
   <img src="/css/images/logo.png" />
